--- a/index.html
+++ b/index.html
@@ -182,14 +182,14 @@ function openHabit(name) {
 
   // Caricamento Dati (GET)
 function loadStats() {
-  const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwCywiaNzlvKMREjX9KDwIaUfw2QGKjvzDEwVKiuJ4X6xyJxCsyq4k40NssqjtrU-UL/exec"
+  const SCRIPT_URL = "AKfycbwCywiaNzlvKMREjX9KDwIaUfw2QGKjvzDEwVKiuJ4X6xyJxCsyq4k40NssqjtrU-UL"; 
   
   // Aggiungiamo un parametro casuale per evitare che il browser usi dati vecchi (cache)
   fetch(SCRIPT_URL + "?t=" + new Date().getTime()) // Questo forza il browser a scaricare dati nuovi
   .then(response => response.json())
   .then(data => {
   
-    fetch(SCRIPT_URL + "?cache=" + Math.random())
+  fetch(SCRIPT_URL + "?cache=" + Math.random())
     .then(response => {
       if (!response.ok) throw new Error('Errore di rete');
       return response.json();
@@ -206,7 +206,6 @@ function loadStats() {
       document.getElementById('a_val').innerText = "Errore Connessione";
     });
 }
-  
   
   function prevHabit() {
     activeHabitIndex = (activeHabitIndex - 1 + myHabits.length) % myHabits.length;
