--- a/index.html
+++ b/index.html
@@ -5,19 +5,33 @@
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
   <style>
   /*Schermata di boot*/
+
   #boot-screen {
-  position: fixed;
-  top: 0; left: 0; width: 100%; height: 100%;
   background: #000;
-  color: #00ff41;
-  font-family: 'Courier New', Courier, monospace;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  padding: 20px;
-  z-index: 10000;
-  font-size: 12px;
-  overflow: hidden;
+  display: grid;
+  grid-template-rows: 1fr auto 1fr; /* Divide in: Area scritte | Area Logo | Area Vuota */
+  align-items: center;
+  justify-content: center;
+}
+
+#boot-text {
+  grid-row: 1;
+  align-self: start; /* Le scritte restano in alto */
+  font-family: 'Courier New';
+  /* ... resto del tuo stile ... */
+}
+
+#boot-logo-container {
+  grid-row: 2;
+  text-align: center;
+}
+
+.xp-loader {
+  width: 150px;
+  height: 20px;
+  border: 2px solid #00ff41;
+  padding: 2px;
+  margin-top: 10px;
 }
 
 .cursor { display: inline-block; width: 8px; height: 15px; background: #00ff41; animation: blink 0.8s infinite; }
