--- a/index.html
+++ b/index.html
@@ -6,32 +6,38 @@
   <style>
   /*Schermata di boot*/
 
-  #boot-screen {
-  background: #000;
-  display: grid;
-  grid-template-rows: 1fr auto 1fr; /* Divide in: Area scritte | Area Logo | Area Vuota */
-  align-items: center;
-  justify-content: center;
+#boot-screen {
+  /* Diventa uno scudo totale */
+  position: fixed; 
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: #000; /* Nero assoluto */
+  color: #00ff41;
+  font-family: 'Courier New', monospace;
+  z-index: 99999; /* Numero altissimo per stare SOPRA a tutto */
+  
+  /* Layout per le scritte e il logo */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; /* Scritte sopra, logo centro, spazio sotto */
+  padding: 20px;
+  box-sizing: border-box;
 }
 
 #boot-text {
-  grid-row: 1;
-  align-self: start; /* Le scritte restano in alto */
-  font-family: 'Courier New';
-  /* ... resto del tuo stile ... */
+  text-align: left;
+  font-size: 14px;
+  line-height: 1.4;
 }
 
 #boot-logo-container {
-  grid-row: 2;
-  text-align: center;
-}
-
-.xp-loader {
-  width: 150px;
-  height: 20px;
-  border: 2px solid #00ff41;
-  padding: 2px;
-  margin-top: 10px;
+  flex-grow: 1; /* Prende lo spazio centrale */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .cursor { display: inline-block; width: 8px; height: 15px; background: #00ff41; animation: blink 0.8s infinite; }
