--- a/index.html
+++ b/index.html
@@ -125,9 +125,11 @@
 
 <body>
     <div id="boot-screen">
-      <div id="boot-text"></div>
-      <span class="cursor"></span>
+     <div id="boot-text"></div>
+     <div id="boot-logo-container">
+        <div class="xp-loader"></div> 
     </div>
+  </div>    
   <div id="home" class="page active">
     <div class="header">
       <h1>SYSTEM_OS</h1>
