--- a/index.html
+++ b/index.html
@@ -245,6 +245,16 @@ input {
     opacity: 0.6; 
 }
 .tool-icon:hover { opacity: 1; color: var(--accent); }
+
+.bg-default { background: #000; }
+.bg-blue { background: #1a237e; color: white; }
+.bg-red { background: #b71c1c; color: white; }
+.bg-green { background: #1b5e20; color: white; }
+.bg-yellow { background: #fbc02d; color: black !important; }
+.keep-card.bg-yellow .label { color: rgba(0,0,0,0.6); }
+
+#detail-extra-list { width: 100%; color: white; margin-top: 10px; }
+
 </style>
 
 </head>
