--- a/index.html
+++ b/index.html
@@ -132,6 +132,15 @@
 
 </div>
 
+<div id="delete-modal" class="custom-modal" style="display:none;">
+    <div class="modal-content">
+        <p style="letter-spacing: 2px;">ELIMINARE RECORD?</p>
+        <div style="display:flex; gap:20px; margin-top:20px;">
+            <button class="btn" onclick="executeDelete()" style="color:red; border-color:red;">SÌ</button>
+            <button class="btn" onclick="cancelDelete()">NO</button>
+        </div>
+    </div>
+</div>
 
 
 </body>
