--- a/index.html
+++ b/index.html
@@ -114,9 +114,11 @@
             </div>
 
 <div class="note-toolbar">
-    <span class="tool-icon" onclick="deleteItem(currentNoteData.id, currentNoteData.type)"><i class="fas fa-trash"></i></span>
+    <span class="tool-icon" onclick="confirmDelete(currentNoteData.id, currentNoteData.type)">
+        <i class="fas fa-trash"></i>
+    </span>
     
-    <div style="position: relative;">
+    <div class="color-selector-container">
         <span class="tool-icon" onclick="toggleColorPicker()"><i class="fas fa-palette"></i></span>
         <div id="color-picker-bubble" class="color-bubble">
             <div class="color-dot bg-default" onclick="changeNoteColor('default')"></div>
@@ -127,10 +129,11 @@
         </div>
     </div>
     
-    <span class="tool-icon"><i class="fas fa-thumbtack"></i></span>
+    <span class="tool-icon" onclick="togglePin()">
+        <i class="fas fa-thumbtack"></i>
+    </span>
 </div>
 
-</div>
 
 <div id="delete-modal" class="custom-modal" style="display:none;">
     <div class="modal-content">
